quoin-macros/tests/ui/component_missing_render.stderr
error: Missing render block
 --> tests/ui/component_missing_render.rs:2:1
  |
2 | / component! {
3 | |     Test {
4 | |         state {
5 | |             count: u32 = 0,
... |
9 | | }
  | |_^
  |
  = note: this error originates in the macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
