quoin-macros/tests/ui/component_missing_render.rs
use quoin_macros::component;
component! {
    Test {
        state {
            count: u32 = 0,
        }
        // missing render block
    }
}
fn main() {}
